# ParaVis

./: .gitignore  Authors.md  CMakeLists.txt  License.md  QtVisConfig.cmake.in  Readme.md  animator.h  color3.h  cudaWrapper.cu  cudaWrapper.h  dataVis.cpp  dataVis.h  dataVisCUDA.cpp  dataVisCUDA.h  fshader.glsl  imageBuffer.h  juliaKernel.cu  juliaKernel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mypanelopengl.cpp  mypanelopengl.h  openmpDemos.cpp  openmpVis.cpp  pthreadVis.cpp  pthreadVis.h  qoglHelper.h  qtViewer.cpp  qtViewer.h  rippleKernel.cu  rippleKernel.h  texturedQuad.cpp  threadDemos.cpp  tquad_f.glsl  userBufferKernel.cu  userBufferKernel.h
cmake_modules/: detectCUDAarch.cmake
common/: CMakeLists.txt
demos/: CMakeLists.txt  main.cpp
demos/cuda/: CMakeLists.txt  cudaDemo.cpp  userBufferKernel.cu
demos/openMP/: CMakeLists.txt  openMPDemo.cpp
demos/pthreads/: CMakeLists.txt  pthreadVis.cpp  pthreadVis.h
include/: CMakeLists.txt  animator.h  cgridvisi.h  color3.h  cudaWrapper.h  cvisi_struct.h  cylinder.h  dataVis.h  dataVisCFunction.h  dataVisCPU.h  dataVisCUDA.h  dataVisPThreads.h  gridVisiWrapper.h  handle_cuda_error.h  imageBuffer.h  mainwindow.h  matrixstack.h  mypanelopengl.h  pthreadGridVisi.h  pthreadGridVisiWrapper.h  qoglHelper.h  qtSafeViewer.h  qtViewer.h  sphere.h  square.h  timerBase.h  timerCPU.h  timerGPU.h
include/osx/: pthread_barrier.h
osxbarrier/: CMakeLists.txt  pthread_barrier.h
shaders/: CMakeLists.txt
src/: CMakeLists.txt  cgridvisi.cpp  cylinder.cpp  dataVis.cpp  dataVisCFunction.cpp  dataVisCPU.cpp  gridVisiWrapper.cpp  mainwindow.cpp  matrixstack.cpp  mypanelopengl.cpp  qtSafeViewer.cpp  qtViewer.cpp  resources.qrc  sphere.cpp  square.cpp  timerCPU.cpp
src/common/: CMakeLists.txt  cylinder.cpp  matrixstack.cpp  sphere.cpp  square.cpp
src/cuda/: CMakeLists.txt  cudaWrapper.cu  dataVisCUDA.cpp
src/osx/: CMakeLists.txt  README.md  pthread_barrier.c
src/pthreads/: CMakeLists.txt  dataVisPThreads.cpp  pthreadGridVisi.cpp  pthreadGridVisiWrapper.cpp
src/shaders/: fshader.glsl
